k8s/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
